<resources>
    <string name="app_name">AndroCrepes</string>
    <string name="action_settings">Préférences</string>
    <string name="Logo">Logo</string>

    <string name="preference_serverTitle">Configuration du serveur distant</string>

    <string name="preferenceIPTitle">Adresse IP</string>
    <string name="preferenceIPDefaultValue">0.0.0.0</string>
    <string name="preferenceIPSummary">Saisir l\'adresse IP (0.0.0.0)</string>

    <string name="preferencePortTitle">Port</string>
    <string name="preferencePortDefaultValue">1234</string>
    <string name="preferencePortSummary">Saisir le port (1234)</string>

    <string name="preferenceClose">Fermer</string>


    <!--string transverses pour toute l'application-->
    <string name="activity_progressDialogWait">Chargement en cours ...</string>
    <string name="activity_toastMessageNoConnection">Impossible de se connecter au serveur !</string>
    <string name="activity_toastMessageUnknownError">Erreur inconnue: merci de prévenir l\'administrateur !</string>
    <string name="activity_toastMessageBeforePlat">Le plat </string>
    <string name="activity_toastMessageAfterPlat"> a été ajouté à la carte !</string>
    <string name="activity_toastMessageBadQuantite">Merci de préciser une quantité correcte !</string>
    <string name="activity_toastMessageBadPlat">Merci de préciser un nom de plat !</string>


    <!--string pour l'activity aide-->
    <string name="aide_activityTitle">AndroCrepes - Aide</string>
    <string name="aide_customTextViewTitle">Aide en ligne</string>
    <string name="aide_URI">file:///android_asset/aideHtml/html/index.html</string>


    <!--string pour l'activity cuisine-->
    <string name="cuisine_activityTitle">AndroCrepes - Cuisine</string>
    <string name="cuisine_customTextViewTitle">Liste des plats</string>
    <string name="cuisine_editTextPlatHint">Nouveau Plat</string>
    <string name="cuisine_buttonAdd">Ajouter</string>
    <string name="cuisine_buttonRowLeft">Enlever</string>
    <string name="cuisine_buttonRowRight">Ajouter</string>

    <!--string pour l'activity home-->
    <string name="home_customTextViewTitle">La Bonne Crèpe</string>
    <string name="home_buttonCuisine">Cuisine</string>
    <string name="home_buttonSalle">Salle</string>
    <string name="home_buttonAide">Aide</string>
    <string name="home_buttonLog_logon">Logon</string>
    <string name="home_buttonLog_logout">Logout</string>


    <!--string pour l'activity salle-->
    <string name="salle_activityTitle">AndroCrepes - Salle</string>
    <string name="salle_customTextViewTitle">Liste des commandes</string>
    <string name="salle_textViewTotal_one">une</string>
    <string name="salle_textViewCommande_none">aucune commande</string>
    <string name="salle_textViewCommande_one">commande</string>
    <string name="salle_textViewCommande_more">commandes</string>
    <string name="salle_buttonLeft">Tout suppr.</string>
    <string name="salle_buttonRight">Ajouter</string>
    <string name="salle_TextViewRowInfo">commande n°</string>
    <string name="salle_buttonRowLeft">Supprimer</string>
    <string name="salle_buttonRowRight">Modifier</string>
    <string name="salle_alertDialogTitle">Attention</string>
    <string name="salle_alertDialogMessage">Vous allez supprimer toutes les commandes en cours !</string>
    <string name="salle_alertDialogYes">oui</string>
    <string name="salle_alertDialogNo">non</string>


    <!--string pour l'activity table-->
    <string name="table_activityTitle">AndroCrepes - Commande</string>
    <string name="table_customTextViewTitle">Commande n°</string>
    <string name="table_buttonRowLeft">Annuler</string>
    <string name="table_buttonRowRight">Commander</string>
    <string name="table_textViewRowStock">disponible en cuisine :</string>

    <!--background color transverses pour toute l'application-->
    <color name="background_activity">#FFBB33</color>
    <color name="background_homeButtonCuisine">#9C27B0</color>
    <color name="background_homeButtonSalle">#3F51B5</color>
    <color name="background_homeButtonAide">#FF5722</color>
    <color name="background_homeButtonLog">#A02828</color>
    <color name="background_customZone">#FFE0B2</color>
    <color name="border_customZone">#FF5722</color>


    <!--font color transverses pour toute l'application-->
    <color name="font_customTextViewTitle">#181870</color>
    <color name="font_button">#F0FFFF</color>
    <color name="font_editText">#424242</color>
    <color name="font_textView">#181870</color>
    <string name="title_activity_setting">SettingActivity</string>
    <color name="colorFondPreferences">#FFD180</color>

</resources>
