<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_serverTitle">

        <EditTextPreference
            android:key="ip"
            android:title="@string/preferenceIPTitle"
            android:hint="@string/preferenceIPDefaultValue"
            android:summary="@string/preferenceIPSummary" />

        <EditTextPreference
            android:key="port"
            android:title="@string/preferencePortTitle"
            android:hint="@string/preferencePortDefaultValue"
            android:summary="@string/preferencePortSummary"/>


    </PreferenceCategory>


    <PreferenceCategory
        android:title="">

        <Preference/>

         <Preference
            android:title="@string/preferenceClose"
            android:key="preferenceClose"/>

    </PreferenceCategory>

</PreferenceScreen>