<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/background_activity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/salle_imageButtonGoHome"
            android:src="@drawable/home"
            android:background="@drawable/roundedbutton"
            android:onClick="goHome"/>

        <FrameLayout
            android:layout_width="5dp"
            android:layout_height="0dp"></FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <crepes.fr.androcrepes.commons.framework.CustomTextView
                android:id="@+id/salle_customTextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/salle_customTextViewTitle"
                android:gravity="center"
                android:textStyle="bold"
                android:typeface="serif"
                android:textColor="@color/font_customTextViewTitle" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="10dp"></FrameLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@drawable/custom_zone2">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico"
                />

            <FrameLayout
                android:layout_width="20dp"
                android:layout_height="0dp"
                ></FrameLayout>

            <TextView
                android:id="@+id/salle_textViewTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/font_textView" />

            <FrameLayout
                android:layout_width="5dp"
                android:layout_height="0dp"
                ></FrameLayout>

            <TextView
                android:id="@+id/salle_textViewCommande"
                android:text="@string/salle_textViewCommande_none"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/font_textView" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="10dp"></FrameLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="110dp"
                android:layout_height="25dp"
                android:text="@string/salle_buttonLeft"
                android:id="@+id/salle_buttonLeft"
                android:layout_gravity="left"
                android:background="@drawable/roundedbuttonmoins"
                android:textColor="@color/font_button"
                android:onClick="clearAll"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3"></FrameLayout>

            <Button
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:text="@string/salle_buttonRight"
                android:id="@+id/salle_buttonRight"
                android:background="@drawable/roundedbuttonplus"
                android:textColor="@color/font_button"
                android:onClick="addCommande"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="10dp"></FrameLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/salle_listView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="90"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0px"/>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="10dp"></FrameLayout>

</LinearLayout>

